--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,12 @@
         <artifactId>okhttp</artifactId>
         <version>4.9.1</version>
     </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
+        </dependency>
 </dependencies>
 
 </project>
